--- a/src/style.css
+++ b/src/style.css
@@ -86,7 +86,7 @@ h1 {
   width: 100px;
   height: 100px;
   color: white;
-  background-color: #342f3d;
+  background-color: #6FCDDF;
   font-size: 20px;
   border-radius: 60px;
 }
